# Text-Summarization

./: README.md  app.py  evaluate.py  fff  inference.py  pyproject.toml
script/: setup.sh  train.sh
src/summarization/dataset/: datamodule.py  get_dataset.py
src/summarization/model/: model.py
src/summarization/train/: __main__.py
