[project]
name = "text-summarization"
authors = [{name = "cristiano2003", email = "nguyentrungtruc2003@gmail.com"}]
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "lightning",
    "torchsummary",
    "transfomers",
    "datasets",
]

[project.optional-dependencies]
dev = [
    "pytest"
]